--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0536.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0536.html
@@ -992,23 +992,18 @@
             <ins class="alt" title="nlp 1.00">φυλάττεσθαι</ins>
           </span>
         </span>
-        <span id="w_191" class="ocr_word" title="bbox 1734 1872 1904 1909" lang="grc">
+        <span id="w_191_0" class="ocr_word" title="bbox 1734 1872 1904 1909">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἔσπευ-</ins>
+            <ins class="alt" title="nlp 2.00">ἔσπευδεν</ins>
           </span>
         </span>
-        <span id="w_192" class="ocr_word" title="bbox 1928 1882 1965 1914">
+        <span id="w_191_1" class="ocr_word" title="bbox 1734 1872 1904 1909">
           <span class="alternatives">
-            <ins title="nlp 2.00">P.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 208 1932 1904 2002">
-        <span id="w_193" class="ocr_word" title="bbox 208 1938 295 1986" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δεν</ins>
-          </span>
-        </span>
         <span id="w_194" class="ocr_word" title="bbox 343 1935 577 2001" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐντέχνως</ins>
@@ -1375,23 +1370,18 @@
             <ins class="alt" title="nlp 1.00">αἰτήσεις</ins>
           </span>
         </span>
-        <span id="w_265" class="ocr_word" title="bbox 1741 2551 1900 2620" lang="grc">
+        <span id="w_265_0" class="ocr_word" title="bbox 1741 2551 1900 2620">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπαγ-</ins>
+            <ins class="alt" title="nlp 2.00">ἀπαγγέλλειν</ins>
           </span>
         </span>
-        <span id="w_266" class="ocr_word" title="bbox 1924 2575 1954 2605">
+        <span id="w_265_1" class="ocr_word" title="bbox 1741 2551 1900 2620">
           <span class="alternatives">
-            <ins title="nlp 2.00">B</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 210 2628 1903 2696">
-        <span id="w_267" class="ocr_word" title="bbox 210 2629 397 2696" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γέλλειν</ins>
-          </span>
-        </span>
         <span id="w_268" class="ocr_word" title="bbox 434 2629 635 2691" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τούτους</ins>
