--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0345.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0345.html
@@ -486,11 +486,6 @@
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_93_0_1" class="ocr_word" title="bbox 1422 1012 1515 1043">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_93_1" class="ocr_word" title="bbox 1422 1012 1515 1043">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">αὐτοῦ</ins>
@@ -498,7 +493,7 @@
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1785 993 1811 1045" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">ὁ 10</ins>
           </span>
         </span>
       </span>
@@ -777,7 +772,7 @@
         </span>
         <span id="w_149_1" class="ocr_word" title="bbox 1282 1533 1651 1604">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">λαὸν</ins>
           </span>
         </span>
       </span>
@@ -928,11 +923,6 @@
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_179_0_1" class="ocr_word" title="bbox 474 1869 567 1899">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_179_1" class="ocr_word" title="bbox 474 1869 567 1899">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">αὐτῶν</ins>
@@ -950,7 +940,7 @@
         </span>
         <span id="w_183" class="ocr_word" title="bbox 1432 1842 1614 1907" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάντες</ins>
+            <ins title="nlp 2.00">πάντες ἀκρωτηριάσαι</ins>
           </span>
         </span>
       </span>
@@ -1086,11 +1076,6 @@
             <ins class="alt" title="nlp 2.00">Μιχαὴλ</ins>
           </span>
         </span>
-        <span id="w_210_1" class="ocr_word" title="bbox 236 2165 445 2227">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_211" class="ocr_word" title="bbox 490 2180 576 2211" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
@@ -1128,7 +1113,7 @@
         </span>
         <span id="w_218" class="ocr_word" title="bbox 1524 2158 1813 2225" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περιουσίας</ins>
+            <ins title="nlp 2.00">περιουσίας 25</ins>
           </span>
         </span>
       </span>
@@ -1296,12 +1281,7 @@
         </span>
         <span id="w_252" class="ocr_word" title="bbox 1497 2466 1630 2519" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
-          </span>
-        </span>
-        <span id="w_253" class="ocr_word" title="bbox 1669 2486 1812 2518" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κατεμάμβανε,</ins>
+            <ins title="nlp 2.00">αὐτῷ κατελάμβανε,</ins>
           </span>
         </span>
       </span>
@@ -1395,7 +1375,7 @@
         </span>
         <span id="w_272_1" class="ocr_word" title="bbox 1272 2710 1610 2763">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">S</ins>
           </span>
         </span>
       </span>
@@ -1558,8 +1538,7 @@
         </span>
         <span id="w_304" class="ocr_word" title="bbox 581 2960 636 2994">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II.</ins>
-            <del title="nlp 0.90">II.</del>
+            <ins title="nlp 2.00">II.</ins>
           </span>
         </span>
         <span id="w_305" class="ocr_word" title="bbox 1534 2951 1562 2988">
