--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0473.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0473.html
@@ -787,16 +787,11 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1714 1562 1805 1607" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φο-</ins>
+            <ins title="nlp 2.00">φονέα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 107 1616 1806 1685">
-        <span id="w_149" class="ocr_word" title="bbox 107 1617 197 1669" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νέα</ins>
-          </span>
-        </span>
         <span id="w_150" class="ocr_word" title="bbox 225 1618 528 1685" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Δημήτριον,</ins>
@@ -876,16 +871,11 @@
         </span>
         <span id="w_165" class="ocr_word" title="bbox 1687 1718 1803 1763" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καρ-</ins>
+            <ins title="nlp 2.00">καρταρόν,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 109 1774 1868 1840">
-        <span id="w_166" class="ocr_word" title="bbox 109 1774 275 1839" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τερόν,</ins>
-          </span>
-        </span>
         <span id="w_167" class="ocr_word" title="bbox 324 1791 448 1840" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
@@ -1029,16 +1019,11 @@
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1719 2008 1804 2071" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βα-</ins>
+            <ins title="nlp 2.00">βασιλικοῖς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 111 2081 1806 2150">
-        <span id="w_196" class="ocr_word" title="bbox 111 2087 313 2143" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σιλικοῖς</ins>
-          </span>
-        </span>
         <span id="w_197" class="ocr_word" title="bbox 352 2083 650 2149" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σπλάγχνοις</ins>
@@ -1071,7 +1056,7 @@
         </span>
         <span id="w_203" class="ocr_word" title="bbox 1467 2086 1570 2141" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 1595 2083 1687 2150" lang="grc">
@@ -1452,9 +1437,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 228 2864 1372 2924">
-        <span id="w_277" class="ocr_word" title="bbox 228 2874 252 2911" lang="grc">
+        <span id="w_277_0" class="ocr_word" title="bbox 228 2874 252 2911">
           <span class="alternatives">
-            <ins title="nlp 2.00">2 μετὰ</ins>
+            <ins class="alt" title="nlp 2.00">2</ins>
+          </span>
+        </span>
+        <span id="w_277_1" class="ocr_word" title="bbox 228 2874 252 2911">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μετὰ</ins>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 621 2873 669 2911" lang="grc">
@@ -1484,7 +1474,7 @@
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1338 2865 1372 2908">
           <span class="alternatives">
-            <ins title="nlp 2.00">r: οὐ F</ins>
+            <ins title="nlp 2.00">οὐ F</ins>
           </span>
         </span>
       </span>
