--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0588.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0588.html
@@ -1414,7 +1414,7 @@
         </span>
         <span id="w_278" class="ocr_word" title="bbox 1721 2631 1769 2666" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*·</ins>
+            <ins title="nlp 2.00">·</ins>
           </span>
         </span>
         <span id="w_279" class="ocr_word" title="bbox 1812 2619 1936 2666" lang="grc">
