--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0422.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0422.html
@@ -692,7 +692,7 @@
         </span>
         <span id="w_130_1" class="ocr_word" title="bbox 1829 1385 1913 1447">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">P</ins>
           </span>
         </span>
       </span>
