--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0346.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0346.html
@@ -128,7 +128,7 @@
         </span>
         <span id="w_21_0_1" class="ocr_word" title="bbox 1606 465 1695 512">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">αὐτην</ins>
           </span>
         </span>
       </span>
@@ -558,7 +558,7 @@
         </span>
         <span id="w_105_0" class="ocr_word" title="bbox 1836 1224 1911 1281">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
       </span>
@@ -865,9 +865,14 @@
             <ins class="alt" title="nlp 1.00">ὅμως</ins>
           </span>
         </span>
-        <span id="w_167" class="ocr_word" title="bbox 937 1770 1271 1839" lang="grc">
+        <span id="w_167_0" class="ocr_word" title="bbox 937 1770 1271 1839">
           <span class="alternatives">
-            <ins title="nlp 2.00">προὐβέβηεκ,</ins>
+            <ins class="alt" title="nlp 2.00">προὐβέβηκε,</ins>
+          </span>
+        </span>
+        <span id="w_167_1" class="ocr_word" title="bbox 937 1770 1271 1839">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 1310 1771 1489 1833" lang="grc">
@@ -883,11 +888,6 @@
         <span id="w_170" class="ocr_word" title="bbox 1568 1770 1711 1841" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λόγος</ins>
-          </span>
-        </span>
-        <span id="w_171" class="ocr_word" title="bbox 1746 1792 1907 1824" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κατωτέρω</ins>
           </span>
         </span>
       </span>
