--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0538.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0538.html
@@ -880,9 +880,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 119 1792 1984 1865">
-        <span id="w_170" class="ocr_word" title="bbox 119 1805 436 1865" lang="grc">
+        <span id="w_170_0" class="ocr_word" title="bbox 119 1805 436 1865">
           <span class="alternatives">
-            <ins title="nlp 2.00">20 καθῆστο,</ins>
+            <ins class="alt" title="nlp 2.00">20</ins>
+          </span>
+        </span>
+        <span id="w_170_1" class="ocr_word" title="bbox 119 1805 436 1865">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καθῆστο,</ins>
           </span>
         </span>
         <span id="w_171" class="ocr_word" title="bbox 485 1798 571 1849" lang="grc">
@@ -1219,9 +1224,14 @@
             <ins class="alt" title="nlp 1.00">ἁμαρτιῶν</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 641 2344 911 2409" lang="grc">
+        <span id="w_235_0" class="ocr_word" title="bbox 641 2344 911 2409">
           <span class="alternatives">
-            <ins title="nlp 2.00">πληθύν’’.</ins>
+            <ins class="alt" title="nlp 2.00">πληθύν”.</ins>
+          </span>
+        </span>
+        <span id="w_235_1" class="ocr_word" title="bbox 641 2344 911 2409">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 977 2363 1019 2394" lang="grc">
@@ -1252,11 +1262,6 @@
         <span id="w_241" class="ocr_word" title="bbox 1501 2342 1698 2410" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">χειλέων</ins>
-          </span>
-        </span>
-        <span id="w_242" class="ocr_word" title="bbox 1722 2342 1880 2394" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
           </span>
         </span>
       </span>
