--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0423.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0423.html
@@ -144,14 +144,14 @@
         </span>
         <span id="w_25" class="ocr_word" title="bbox 1652 463 1784 492" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄντι-</ins>
+            <ins title="nlp 2.00">ἄντικρυς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 17 513 1783 584">
         <span id="w_26" class="ocr_word" title="bbox 89 536 210 582" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κρυς</ins>
+            <ins title="nlp 2.00">C</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 249 517 392 565" lang="grc">
@@ -648,7 +648,7 @@
         </span>
         <span id="w_123_1" class="ocr_word" title="bbox 1634 1367 1782 1433">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
