--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0474.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0474.html
@@ -106,16 +106,11 @@
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1801 372 1916 448" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοι-</ins>
+            <ins title="nlp 2.00">τοιούτων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 199 456 1880 524">
-        <span id="w_19" class="ocr_word" title="bbox 199 458 359 508" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ούτων</ins>
-          </span>
-        </span>
         <span id="w_20" class="ocr_word" title="bbox 395 457 692 524" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γραμμάτων</ins>
@@ -524,16 +519,11 @@
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1745 1077 1897 1142" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐλογί-</ins>
+            <ins title="nlp 2.00">ἐλογίσατο</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 196 1152 1899 1220">
-        <span id="w_99" class="ocr_word" title="bbox 196 1171 312 1206" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σατο</ins>
-          </span>
-        </span>
         <span id="w_100" class="ocr_word" title="bbox 352 1157 589 1215" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σύνταξιν</ins>
@@ -722,9 +712,14 @@
             <ins class="alt" title="nlp 1.00">μαρμαίροντες</ins>
           </span>
         </span>
-        <span id="w_136" class="ocr_word" title="bbox 791 1463 896 1524" lang="grc">
+        <span id="w_136_0" class="ocr_word" title="bbox 791 1463 896 1524">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_136_1" class="ocr_word" title="bbox 791 1463 896 1524">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 932 1485 998 1529" lang="grc">
@@ -752,23 +747,13 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_142" class="ocr_word" title="bbox 1771 1478 1891 1514" lang="grc">
+        <span id="w_142_0" class="ocr_word" title="bbox 1771 1478 1891 1514">
           <span class="alternatives">
-            <ins title="nlp 2.00">σύν-</ins>
-          </span>
-        </span>
-        <span id="w_143" class="ocr_word" title="bbox 1914 1482 1946 1514">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00">σύνταγμα)</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 192 1540 1896 1610">
-        <span id="w_144" class="ocr_word" title="bbox 192 1545 371 1610" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τάγμα)</ins>
-          </span>
-        </span>
         <span id="w_145" class="ocr_word" title="bbox 411 1563 494 1592" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -801,16 +786,11 @@
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1561 1556 1896 1608" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συνηρμοσμέ-</ins>
+            <ins title="nlp 2.00">συνηρμοσμένοι·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 193 1617 1896 1686">
-        <span id="w_152" class="ocr_word" title="bbox 193 1637 291 1671" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νοι·</ins>
-          </span>
-        </span>
         <span id="w_153" class="ocr_word" title="bbox 333 1639 464 1680" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἶπες</ins>
@@ -1145,23 +1125,18 @@
             <ins class="alt" title="nlp 1.00">ἀρχηγοὺς</ins>
           </span>
         </span>
-        <span id="w_218" class="ocr_word" title="bbox 1751 2179 1891 2231" lang="grc">
+        <span id="w_218_0" class="ocr_word" title="bbox 1751 2179 1891 2231">
           <span class="alternatives">
-            <ins title="nlp 2.00">στρα-</ins>
+            <ins class="alt" title="nlp 2.00">στρατευμάτων</ins>
           </span>
         </span>
-        <span id="w_219" class="ocr_word" title="bbox 1918 2185 1946 2220">
+        <span id="w_218_1" class="ocr_word" title="bbox 1751 2179 1891 2231">
           <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 191 2236 1891 2308">
-        <span id="w_220" class="ocr_word" title="bbox 191 2236 445 2304" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τευμάτων</ins>
-          </span>
-        </span>
         <span id="w_221" class="ocr_word" title="bbox 482 2237 791 2304" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατέστησεν.</ins>
@@ -1419,16 +1394,11 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1799 2632 1890 2693" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βα-</ins>
+            <ins title="nlp 2.00">βασιλεῖ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 191 2697 1892 2771">
-        <span id="w_271" class="ocr_word" title="bbox 191 2704 312 2750" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σιλεῖ</ins>
-          </span>
-        </span>
         <span id="w_272" class="ocr_word" title="bbox 362 2697 663 2765" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ταττόμενοι·</ins>
@@ -1516,16 +1486,11 @@
             <ins class="alt" title="nlp 1.00">11</ins>
           </span>
         </span>
-        <span id="w_289" class="ocr_word" title="bbox 1783 2831 1889 2860" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συν-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 190 2867 525 2922">
         <span id="w_290" class="ocr_word" title="bbox 190 2869 460 2922" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ηλαύνοντο</ins>
+            <ins title="nlp 2.00">συνηλαύνοντο</ins>
           </span>
         </span>
         <span id="w_291" class="ocr_word" title="bbox 490 2867 525 2909">
