--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0347.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0347.html
@@ -248,7 +248,7 @@
         </span>
         <span id="w_44_1" class="ocr_word" title="bbox 1686 605 1802 641">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -1039,12 +1039,7 @@
         </span>
         <span id="w_201_0_0" class="ocr_word" title="bbox 1048 1990 1164 2046">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(κατ᾿</ins>
-          </span>
-        </span>
-        <span id="w_201_0_1" class="ocr_word" title="bbox 1048 1990 1164 2046">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">(κατ' </ins>
           </span>
         </span>
         <span id="w_201_1" class="ocr_word" title="bbox 1048 1990 1164 2046">
@@ -1054,7 +1049,7 @@
         </span>
         <span id="w_202" class="ocr_word" title="bbox 1560 1989 1708 2057" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγω,</ins>
+            <ins title="nlp 2.00">λέγω, εἰ</ins>
           </span>
         </span>
       </span>
@@ -1509,12 +1504,7 @@
         </span>
         <span id="w_292_0" class="ocr_word" title="bbox 1405 2796 1796 2854">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">s:</ins>
-          </span>
-        </span>
-        <span id="w_292_1" class="ocr_word" title="bbox 1405 2796 1796 2854">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τετρεμμένοι</ins>
+            <ins title="nlp 2.00">s: τετρεμμένοι</ins>
           </span>
         </span>
       </span>
