--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0591.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0591.html
@@ -646,7 +646,7 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 781 1296 1055 1360" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Βασίλειος</ins>
+            <ins title="nlp 2.00">(Βασίλειος</ins>
           </span>
         </span>
         <span id="w_126" class="ocr_word" title="bbox 1101 1315 1195 1361" lang="grc">
@@ -1313,7 +1313,7 @@
         </span>
         <span id="w_261" class="ocr_word" title="bbox 1663 2524 1829 2590" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[πολυτροπώτατος</ins>
+            <ins title="nlp 2.00">πολυτροπώτατος</ins>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 1852 2536 1892 2568">
