--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0425.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0425.html
@@ -241,14 +241,24 @@
             <ins title="nlp 2.00">παράκειται,</ins>
           </span>
         </span>
-        <span id="w_44" class="ocr_word" title="bbox 1020 571 1367 626" lang="grc">
+        <span id="w_44_0" class="ocr_word" title="bbox 1020 571 1367 626">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπυνθάνοντο</ins>
+            <ins class="alt" title="nlp 2.00">παράκειται,</ins>
           </span>
         </span>
-        <span id="w_45_0" class="ocr_word" title="bbox 1427 580 1785 642">
+        <span id="w_44_1" class="ocr_word" title="bbox 1020 571 1367 626">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἐπυνθάνοντο</ins>
+            <ins class="alt" title="nlp 2.00">ἐπυνθάνοντο</ins>
+          </span>
+        </span>
+        <span id="w_45_0_0" class="ocr_word" title="bbox 1427 580 1785 642">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἀναζητοῦντες</ins>
+          </span>
+        </span>
+        <span id="w_45_0_1" class="ocr_word" title="bbox 1427 580 1785 642">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -718,7 +728,7 @@
         </span>
         <span id="w_136_1" class="ocr_word" title="bbox 1634 1369 1784 1400">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -1316,11 +1326,6 @@
             <ins class="alt" title="nlp 2.00">Χαλίντζην</ins>
           </span>
         </span>
-        <span id="w_253_1" class="ocr_word" title="bbox 214 2515 493 2578">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_254" class="ocr_word" title="bbox 539 2512 657 2579" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μετὰ</ins>
@@ -1346,9 +1351,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_259" class="ocr_word" title="bbox 1523 2510 1783 2574" lang="grc">
+        <span id="w_259_0" class="ocr_word" title="bbox 1523 2510 1783 2574">
           <span class="alternatives">
-            <ins title="nlp 2.00">Γελίελμον</ins>
+            <ins class="alt" title="nlp 2.00">Γελίελμον</ins>
+          </span>
+        </span>
+        <span id="w_259_1" class="ocr_word" title="bbox 1523 2510 1783 2574">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
