--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0592.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0592.html
@@ -603,7 +603,7 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1308 1233 1566 1299" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(περιέχριε</ins>
+            <ins title="nlp 2.00">περιέχριε</ins>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1617 1253 1710 1299" lang="grc">
@@ -724,7 +724,7 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 674 1466 771 1532" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[σε]</ins>
+            <ins title="nlp 2.00">σε]</ins>
           </span>
         </span>
         <span id="w_138" class="ocr_word" title="bbox 813 1467 867 1515" lang="grc">
