--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0476.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0476.html
@@ -732,23 +732,18 @@
             <ins class="alt" title="nlp 1.00">ἀναριθμήτου</ins>
           </span>
         </span>
-        <span id="w_139" class="ocr_word" title="bbox 1740 1499 1879 1548" lang="grc">
+        <span id="w_139_0" class="ocr_word" title="bbox 1740 1499 1879 1548">
           <span class="alternatives">
-            <ins title="nlp 2.00">στρα-</ins>
+            <ins class="alt" title="nlp 2.00">στρατεύματος</ins>
           </span>
         </span>
-        <span id="w_140" class="ocr_word" title="bbox 1903 1495 1935 1527">
+        <span id="w_139_1" class="ocr_word" title="bbox 1740 1499 1879 1548">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 181 1559 1882 1627">
-        <span id="w_141" class="ocr_word" title="bbox 181 1561 415 1627" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τεύματος</ins>
-          </span>
-        </span>
         <span id="w_142" class="ocr_word" title="bbox 453 1581 536 1611" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -988,16 +983,11 @@
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1787 2024 1882 2075" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπ-</ins>
+            <ins title="nlp 2.00">ἀπετείνετο.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 181 2099 1881 2168">
-        <span id="w_188" class="ocr_word" title="bbox 181 2102 400 2152" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ετείνετο.</ins>
-          </span>
-        </span>
         <span id="w_189" class="ocr_word" title="bbox 439 2120 523 2150" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
