--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0540.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0540.html
@@ -1236,14 +1236,14 @@
             <ins class="alt" title="nlp 1.00">θαλάσσης</ins>
           </span>
         </span>
-        <span id="w_237" class="ocr_word" title="bbox 1781 2445 1891 2475" lang="grc">
+        <span id="w_237_0" class="ocr_word" title="bbox 1781 2445 1891 2475">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ-</ins>
+            <ins class="alt" title="nlp 2.00">κατἐσχον</ins>
           </span>
         </span>
-        <span id="w_238" class="ocr_word" title="bbox 1917 2435 1946 2465">
+        <span id="w_237_1" class="ocr_word" title="bbox 1781 2445 1891 2475">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
