--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0477.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0477.html
@@ -1321,14 +1321,14 @@
             <ins class="alt" title="nlp 1.00">μηχανήματος</ins>
           </span>
         </span>
-        <span id="w_255" class="ocr_word" title="bbox 1637 2535 1819 2602" lang="grc">
+        <span id="w_255_0" class="ocr_word" title="bbox 1637 2535 1819 2602">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπαγό-</ins>
+            <ins class="alt" title="nlp 2.00">ἀπαγόρευσιν.</ins>
           </span>
         </span>
-        <span id="w_256" class="ocr_word" title="bbox 1842 2557 1886 2589">
+        <span id="w_255_1" class="ocr_word" title="bbox 1637 2535 1819 2602">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1336,11 +1336,6 @@
         <span id="w_257" class="ocr_word" title="bbox 86 2642 110 2675">
           <span class="alternatives">
             <ins title="nlp 2.00">C</ins>
-          </span>
-        </span>
-        <span id="w_258" class="ocr_word" title="bbox 132 2639 313 2688" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ρευσιν.</ins>
           </span>
         </span>
         <span id="w_259" class="ocr_word" title="bbox 388 2641 516 2671" lang="grc">
