--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0541.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0541.html
@@ -285,9 +285,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 134 790 1827 861">
-        <span id="w_52" class="ocr_word" title="bbox 134 792 309 860" lang="grc">
+        <span id="w_52_0" class="ocr_word" title="bbox 134 792 309 860">
           <span class="alternatives">
-            <ins title="nlp 2.00">ῥόντα</ins>
+            <ins class="alt" title="nlp 2.00">ῥέοντα</ins>
+          </span>
+        </span>
+        <span id="w_52_1" class="ocr_word" title="bbox 134 792 309 860">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 356 811 449 857" lang="grc">
@@ -323,11 +328,6 @@
         <span id="w_60" class="ocr_word" title="bbox 1627 794 1719 861" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀφ’</ins>
-          </span>
-        </span>
-        <span id="w_61" class="ocr_word" title="bbox 1770 816 1827 846" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὗ</ins>
           </span>
         </span>
       </span>
@@ -1343,19 +1343,19 @@
             <ins class="alt" title="nlp 1.00">8</ins>
           </span>
         </span>
-        <span id="w_259" class="ocr_word" title="bbox 1001 2729 1403 2786" lang="grc">
+        <span id="w_259_0" class="ocr_word" title="bbox 1001 2729 1403 2786">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπορρυήσονται</ins>
+            <ins class="alt" title="nlp 2.00">ἀπορρυίσκουνται</ins>
+          </span>
+        </span>
+        <span id="w_259_1" class="ocr_word" title="bbox 1001 2729 1403 2786">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1437 2743 1480 2769">
           <span class="alternatives">
             <ins title="nlp 2.00">r:</ins>
-          </span>
-        </span>
-        <span id="w_261" class="ocr_word" title="bbox 1522 2723 1832 2780" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀπορυίσκονται</ins>
           </span>
         </span>
       </span>
@@ -1410,9 +1410,9 @@
             <ins title="nlp 2.00">sic</ins>
           </span>
         </span>
-        <span id="w_273" class="ocr_word" title="bbox 1652 2793 1834 2835">
+        <span id="w_273_0" class="ocr_word" title="bbox 1652 2793 1834 2835">
           <span class="alternatives">
-            <ins title="nlp 2.00">semer</ins>
+            <ins class="alt" title="nlp 2.00">semper</ins>
           </span>
         </span>
       </span>
