--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0350.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0350.html
@@ -319,14 +319,14 @@
             <ins class="alt" title="nlp 1.00">λύπης</ins>
           </span>
         </span>
-        <span id="w_60" class="ocr_word" title="bbox 1710 808 1783 837" lang="grc">
+        <span id="w_60_0" class="ocr_word" title="bbox 1710 808 1783 837">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὤν</ins>
+            <ins class="alt" title="nlp 2.00">ὢν</ins>
           </span>
         </span>
-        <span id="w_61" class="ocr_word" title="bbox 1818 786 1903 837" lang="grc">
+        <span id="w_60_1" class="ocr_word" title="bbox 1710 808 1783 837">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -843,19 +843,19 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_164" class="ocr_word" title="bbox 1228 1742 1352 1773" lang="grc">
+        <span id="w_164_0" class="ocr_word" title="bbox 1228 1742 1352 1773">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνευ</ins>
+            <ins class="alt" title="nlp 2.00">ἄνευ</ins>
+          </span>
+        </span>
+        <span id="w_164_1" class="ocr_word" title="bbox 1228 1742 1352 1773">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_165" class="ocr_word" title="bbox 1389 1722 1624 1788" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὀμμάτων</ins>
-          </span>
-        </span>
-        <span id="w_166" class="ocr_word" title="bbox 1659 1737 1901 1787" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μουδικῆς</ins>
           </span>
         </span>
       </span>
@@ -1414,14 +1414,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 319 2842 1758 2901">
-        <span id="w_274" class="ocr_word" title="bbox 319 2849 343 2887">
-          <span class="alternatives">
-            <ins title="nlp 2.00">2</ins>
-          </span>
-        </span>
         <span id="w_276" class="ocr_word" title="bbox 877 2850 902 2889">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">5</ins>
+            <ins title="nlp 2.00">2 ἐπανέστρεψεν 5</ins>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 936 2847 1167 2890" lang="grc">
