--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0427.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0427.html
@@ -908,7 +908,7 @@
         </span>
         <span id="w_173_1" class="ocr_word" title="bbox 1606 1776 1752 1806">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1032,9 +1032,9 @@
             <ins class="alt" title="nlp 1.00">ὁπόσους</ins>
           </span>
         </span>
-        <span id="w_200" class="ocr_word" title="bbox 1627 1986 1752 2038" lang="grc">
+        <span id="w_200_0" class="ocr_word" title="bbox 1627 1986 1752 2038">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑπό-</ins>
+            <ins class="alt" title="nlp 2.00">ὑπόπτους</ins>
           </span>
         </span>
       </span>
@@ -1042,11 +1042,6 @@
         <span id="w_201" class="ocr_word" title="bbox 14 2095 37 2126" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_202" class="ocr_word" title="bbox 58 2088 209 2130" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πτους</ins>
           </span>
         </span>
         <span id="w_203" class="ocr_word" title="bbox 259 2073 354 2133" lang="grc">
@@ -1123,7 +1118,7 @@
         </span>
         <span id="w_216_1" class="ocr_word" title="bbox 1636 2144 1748 2192">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -1462,9 +1457,9 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_283" class="ocr_word" title="bbox 1600 2764 1740 2809" lang="grc">
+        <span id="w_283_0" class="ocr_word" title="bbox 1600 2764 1740 2809">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κων-</ins>
+            <ins class="alt" title="nlp 2.00">Κωνσταντίνου</ins>
           </span>
         </span>
       </span>
@@ -1472,11 +1467,6 @@
         <span id="w_284" class="ocr_word" title="bbox 17 2867 37 2901">
           <span class="alternatives">
             <ins title="nlp 2.00">C</ins>
-          </span>
-        </span>
-        <span id="w_285" class="ocr_word" title="bbox 62 2846 318 2893" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σταντίνου</ins>
           </span>
         </span>
         <span id="w_286" class="ocr_word" title="bbox 357 2843 769 2906" lang="grc">
