--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0478.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0478.html
@@ -578,16 +578,11 @@
         </span>
         <span id="w_110" class="ocr_word" title="bbox 1719 1241 1878 1286" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθά-</ins>
+            <ins title="nlp 2.00">καθάπερ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 175 1313 1993 1383">
-        <span id="w_111" class="ocr_word" title="bbox 175 1336 265 1383" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περ</ins>
-          </span>
-        </span>
         <span id="w_112" class="ocr_word" title="bbox 304 1336 432 1376" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τινὲς</ins>
@@ -818,16 +813,11 @@
         </span>
         <span id="w_156" class="ocr_word" title="bbox 1728 1623 1879 1691" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εὐμη-</ins>
+            <ins title="nlp 2.00">εὐμηκέστατον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 175 1700 1880 1770">
-        <span id="w_157" class="ocr_word" title="bbox 175 1720 409 1754" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κέστατον</ins>
-          </span>
-        </span>
         <span id="w_158" class="ocr_word" title="bbox 447 1703 638 1770" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τάφρον</ins>
@@ -1184,16 +1174,11 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1755 2244 1875 2295" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνα-</ins>
+            <ins title="nlp 2.00">ἀνασκάπτοντας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 177 2319 1881 2391">
-        <span id="w_227" class="ocr_word" title="bbox 177 2324 487 2383" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σκάπτοντας</ins>
-          </span>
-        </span>
         <span id="w_228" class="ocr_word" title="bbox 536 2343 619 2373" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
