--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0595.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0595.html
@@ -1417,7 +1417,7 @@
         </span>
         <span id="w_273" class="ocr_word" title="bbox 826 2765 871 2818" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(η</ins>
+            <ins title="nlp 2.00">η</ins>
           </span>
         </span>
         <span id="w_274" class="ocr_word" title="bbox 895 2775 951 2803">
