--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0479.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0479.html
@@ -110,9 +110,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_19" class="ocr_word" title="bbox 1660 405 1815 449" lang="grc">
+        <span id="w_19_0" class="ocr_word" title="bbox 1660 405 1815 449">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐμφυ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐμφυσᾶται</ins>
           </span>
         </span>
       </span>
@@ -125,11 +125,6 @@
         <span id="w_21" class="ocr_word" title="bbox 49 475 111 508">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">304</ins>
-          </span>
-        </span>
-        <span id="w_22" class="ocr_word" title="bbox 127 469 269 509" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σᾶται</ins>
           </span>
         </span>
         <span id="w_23" class="ocr_word" title="bbox 304 459 438 526" lang="grc">
@@ -394,16 +389,11 @@
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1652 848 1814 899" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθά-</ins>
+            <ins title="nlp 2.00">καθάπερ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 124 923 1815 992">
-        <span id="w_74" class="ocr_word" title="bbox 124 944 214 991" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περ</ins>
-          </span>
-        </span>
         <span id="w_75" class="ocr_word" title="bbox 265 940 452 989" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σμῆνος</ins>
@@ -854,21 +844,11 @@
         </span>
         <span id="w_162" class="ocr_word" title="bbox 1686 1621 1813 1686" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πύρ-</ins>
+            <ins title="nlp 2.00">πύργοις·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 118 1701 1813 1770">
-        <span id="w_163" class="ocr_word" title="bbox 118 1722 222 1769" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γοις</ins>
-          </span>
-        </span>
-        <span id="w_164" class="ocr_word" title="bbox 240 1720 251 1732">
-          <span class="alternatives">
-            <ins title="nlp 2.00">· </ins>
-          </span>
-        </span>
         <span id="w_165" class="ocr_word" title="bbox 306 1724 352 1755" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἱ</ins>
