--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0428.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0428.html
@@ -653,9 +653,9 @@
             <ins class="alt" title="nlp 1.00">καταλιπὼν</ins>
           </span>
         </span>
-        <span id="w_125" class="ocr_word" title="bbox 1756 1314 1938 1361" lang="grc">
+        <span id="w_125_0" class="ocr_word" title="bbox 1756 1314 1938 1361">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μονα-</ins>
+            <ins class="alt" title="nlp 2.00">Μοναστρᾶν,</ins>
           </span>
         </span>
       </span>
@@ -663,11 +663,6 @@
         <span id="w_126" class="ocr_word" title="bbox 177 1410 217 1440">
           <span class="alternatives">
             <ins title="nlp 2.00">15</ins>
-          </span>
-        </span>
-        <span id="w_127" class="ocr_word" title="bbox 241 1390 417 1454" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">στρᾶν,</ins>
           </span>
         </span>
         <span id="w_128" class="ocr_word" title="bbox 477 1406 588 1453" lang="grc">
@@ -761,7 +756,7 @@
         </span>
         <span id="w_145" class="ocr_word" title="bbox 1488 1541 1659 1609" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[πρὸς]</ins>
+            <ins title="nlp 2.00">πρὸς]</ins>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1702 1542 1759 1593" lang="grc">
