--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0545.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0545.html
@@ -1200,9 +1200,14 @@
             <ins class="alt" title="nlp 1.00">ἕνα</ins>
           </span>
         </span>
-        <span id="w_228" class="ocr_word" title="bbox 507 2347 807 2412" lang="grc">
+        <span id="w_228_0" class="ocr_word" title="bbox 507 2347 807 2412">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐλάβομεν’̓’.</ins>
+            <ins class="alt" title="nlp 2.00">ἐλάβομεν“.</ins>
+          </span>
+        </span>
+        <span id="w_228_1" class="ocr_word" title="bbox 507 2347 807 2412">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 882 2353 998 2407" lang="grc">
@@ -1223,11 +1228,6 @@
         <span id="w_233" class="ocr_word" title="bbox 1379 2344 1591 2407" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁπηνίκα</ins>
-          </span>
-        </span>
-        <span id="w_234" class="ocr_word" title="bbox 1631 2341 1842 2406" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ωικήσειέ</ins>
           </span>
         </span>
       </span>
@@ -1420,7 +1420,7 @@
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1161 2731 1261 2784" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τὸν</ins>
+            <ins title="nlp 2.00">τὸν</ins>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 1295 2762 1305 2773">
