--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0544.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0544.html
@@ -1029,23 +1029,18 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_197" class="ocr_word" title="bbox 1751 1975 1894 2020" lang="grc">
+        <span id="w_197_0" class="ocr_word" title="bbox 1751 1975 1894 2020">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μον-</ins>
+            <ins class="alt" title="nlp 2.00">Μουχοῦμετ,</ins>
           </span>
         </span>
-        <span id="w_198" class="ocr_word" title="bbox 1921 1987 1951 2018">
+        <span id="w_197_1" class="ocr_word" title="bbox 1751 1975 1894 2020">
           <span class="alternatives">
-            <ins title="nlp 2.00">B</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 203 2044 1952 2113">
-        <span id="w_199" class="ocr_word" title="bbox 203 2056 399 2113" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">χοῦμετ,</ins>
-          </span>
-        </span>
         <span id="w_200" class="ocr_word" title="bbox 436 2047 641 2110" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρώτως</ins>
