--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0543.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0543.html
@@ -595,9 +595,9 @@
             <ins class="alt" title="nlp 1.00">βασιλικῶν</ins>
           </span>
         </span>
-        <span id="w_114" class="ocr_word" title="bbox 1657 1178 1831 1240" lang="grc">
+        <span id="w_114_0" class="ocr_word" title="bbox 1657 1178 1831 1240">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ταῦτα</ins>
+            <ins class="alt" title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
       </span>
@@ -820,9 +820,9 @@
             <ins class="alt" title="nlp 1.00">ὅλως</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 1559 1562 1830 1627" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 1559 1562 1830 1627">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ῥωμαικοῦ</ins>
+            <ins class="alt" title="nlp 2.00">Ῥωμαϊκοῦ</ins>
           </span>
         </span>
       </span>
