--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0546.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0546.html
@@ -737,9 +737,14 @@
             <ins class="alt" title="nlp 1.00">θύρας</ins>
           </span>
         </span>
-        <span id="w_140" class="ocr_word" title="bbox 657 1492 991 1562" lang="grc">
+        <span id="w_140_0" class="ocr_word" title="bbox 657 1492 991 1562">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἀριστήριον</ins>
+            <ins class="alt" title="nlp 2.00">(Ἀριστήριον</ins>
+          </span>
+        </span>
+        <span id="w_140_1" class="ocr_word" title="bbox 657 1492 991 1562">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_141" class="ocr_word" title="bbox 1019 1512 1159 1542" lang="grc">
@@ -755,11 +760,6 @@
         <span id="w_143" class="ocr_word" title="bbox 1364 1491 1659 1560" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὠνόμαζον),</ins>
-          </span>
-        </span>
-        <span id="w_144" class="ocr_word" title="bbox 1699 1499 1886 1543" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">θεασαμένη</ins>
           </span>
         </span>
       </span>
